	watched directory)
	* Added create_window_xid() which do the same job as Fl_X::make_xid() but
	with function parameter where can be done work before window is mapped
	* icon() is now known as window_icon() so to not collide with default
	icon() member from Fl_Window
	* Let ALLFLAGS contains FLTKFLAGS (in Jamconfig.in) so jam can pick up
	correctly X11 paths

2007-11-29  Sanel <karijes@users.sourceforge.net>

	* Added checks for daylight variable; FreeBSD does not have it (presumably
	other BSD's). Is this glibc extension ?
	* Cleared some old code from Window.cpp
	* Let SoundSystem be correctly compiled when sounds are disabled

2007-11-28  Sanel <karijes@users.sourceforge.net>

	* Implemented icon() in Window which will correctly set an titlebar icon
	with transparency. Also added libxpm.m4 for libXpm checks since icon()
	use it.

2007-11-26  Sanel <karijes@users.sourceforge.net>

	* Let jam distclean remove .jamcache and .jamhcache files
	* Versioning is done in single place in configure.in
	* Fixed issue in inotify DirWatch when file is moved in/out watched
	directory so DirWatch can report DW_REPORT_CREATE/DW_REPORT_DELETE
	correctly

2007-11-25  Sanel <karijes@users.sourceforge.net>

	* Added mime.m4 which should check presence of XDG MIME database
	* DirWatchFam.cpp added with FAM/Gamin implementation
	* DirWatchInotify.cpp returns true if directory already registered, the
	same behaviour as for DirWatchFam.cpp
	* Removed DW_DNOTIFY from DirWatch header and dirwatch.cpp example
	* Removed DirWatchDnotify.cpp file
	* One less entry in TODO
	* DirWatchGeneric.cpp will return true for every function, so it can be
	used in code without interruption, althought will do nothing ;-)
	* Removed dnotify checks in notify.m4
	* Made DirWatch be compiled when FLTK is present since it depends on
	FLTK's descriptor watching code
	* Handle FAMAcknowledge event too
	* Removed obsolete comment from IconTheme
	* Removed obsolete commented code from Directory.cpp
