@@ -49,6 +49,7 @@ SOURCE_GUI = DirWatch.cpp
 			 Window.cpp
 			 ExpandableGroup.cpp
 			 IconChooser.cpp 
+			 FontChooser.cpp
 			 MessageBox.cpp
 			 SevenSeg.cpp ;
 
